# ki-rechnungsverarbeitung

./: .env.example  .gitignore  .pr-smoke  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPLOY.md  Dockerfile  ERROR_HANDLING.md  README.md  README.md.bak-uploadfix-2025-11-11-004732  README_v3.md  SECURITY.md  advanced_export.py  analytics_service.py  api_frontend.py  api_keys.py  api_nexus.py  approval.py  approval_workflow.py  audit.py  audit_events.py  backup-status.sh  backup.py  backup.sh  budget_routes.py  budget_routes.py.bak-20260119_174734  budget_service.py  cache.py  category_ai.py  config.yaml  config.yaml.example  cost_tracker.py  cron_enterprise.py  cron_spend_analysis.py  customer_routes.py  dashboard.py  dashboard_widgets.py  database.py  database.py.bak-2025-11-26-2254  (+81 more)
_archive/: database_cleanup_backup_20251124_021613.py
_old_code/: generate_test_invoices.py  invoice_core_enhanced.py  invoice_parser.py  invoice_parser_gui.py  invoice_parser_v2.py  invoice_parser_v3.py  test_ai_slack.py
alembic/: env.py
backup_20260203_162219/: app.py
docs/: FLOWCHECK_ARCHITECTURE_BASELINE.md  FLOWCHECK_AUTH_HARDENING_SUMMARY.md  FLOWCHECK_CSRF_HARDENING_PLAN.md  FLOWCHECK_PASSWORD_HASHING_MIGRATION_PLAN.md  FLOWCHECK_ROUTE_AUTH_AUDIT.md  FLOWCHECK_SECURITY_HOTFIX_PLAN.md  FRONTEND_API.md  POSTGRES_MIGRATION.md
email_templates/: completion.html
exports/: DATEV_Rechnungen_20260107_190445.xml
mbr/: __init__.py  data.py  generator.py  llm.py  pptx_renderer.py  types.py
pptx_templates/: .gitkeep  mbr_template.pptx
scripts/: audit_csrf_gaps.py  email_ingestion_cron.py  (+2 more)
(+542 files in other folders)
